objects/mirketappm__Resource__c.object
<CustomObject>
    <description>resources present in the project such as project manager, developer, QA, BA etc.</description>
    <fields>
        <fullName>mirketappm__Designation__c</fullName>
        <description>designation of the employee resource.</description>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Java Developer</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Senior Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Team Lead</fullName>
                </value>
                <value>
                    <fullName>Tech Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mirketappm__Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mirketappm__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mirketappm__Jira_User_Id__c</fullName>
        <description>stores the jira resource key.</description>
        <label>Jira User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mirketappm__Jira_User_Name__c</fullName>
        <description>user name of the jira user</description>
        <label>Jira User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>mirketappm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>mirketappm__Resource_List_View</fullName>
        <columns>NAME</columns>
        <columns>mirketappm__Designation__c</columns>
        <columns>mirketappm__Employee_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>mirketappm__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Resource List View</label>
    </listViews>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>